# buddy

./: .gitmodules  CMakeLists.txt  cond1.txt  cond2.txt  cond3.txt  cond4.txt  main.cpp
